Change to v1 gatsbycli

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-cli": "^2.4.5",
+    "gatsby-cli": "^1.x.x",
     "node-sass": "^4.9.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
