--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "Hunter Chang",
   "dependencies": {
     "gatsby": "^2.0.0",
+    "gatsby-cli": "^2.4.5",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
-    "gatsby-cli": "^2.4.5",
+    "gatsby-plugin-twitter": "^2.0.7",
     "node-sass": "^4.9.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
