--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
+    "bootstrap-css-only": "^4.1.3",
     "gatsby": "^2.0.0",
     "gatsby-cli": "^2.4.5",
     "gatsby-plugin-manifest": "^2.0.2",
@@ -11,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-twitter": "^2.0.7",
+    "mdbreact": "^4.8.6",
     "node-sass": "^4.9.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
