--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-twitter": "^2.0.7",
+    "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-json": "^2.1.6",
     "mdbreact": "^4.8.6",
     "node-sass": "^4.9.3",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
