--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-plugin-twitter": "^2.0.7",
     "gatsby-source-filesystem": "^2.0.12",
+    "gatsby-transformer-javascript-frontmatter": "^2.0.5",
     "gatsby-transformer-json": "^2.1.6",
     "mdbreact": "^4.8.6",
     "node-sass": "^4.9.3",
