Update website, almost ready

--- a/src/data/oneplanetliving/healthhappiness.json
+++ b/src/data/oneplanetliving/healthhappiness.json
@@ -3,5 +3,5 @@
   "style": "health",
   "area": "Health and Happiness",
   "icon": "fa-medkit",
-  "description": "Encouraging active, sociable, meaningful lives to promote good health and wellbeing"
+  "description": "Encouraging active, sociable, meaningful lives to promote good health and wellbeing."
 }
