--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Hunter Chang",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.1",
     "bootstrap-css-only": "^4.1.3",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.0",
