--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Hunter Chang",
   "dependencies": {
     "bootstrap-css-only": "^4.1.3",
+    "bulma": "^0.7.5",
     "classnames": "^2.2.6",
     "gatsby": "^2.0.0",
     "gatsby-cli": "^2.4.5",
